--- a/templates/evaluation/request_evaluation.html
+++ b/templates/evaluation/request_evaluation.html
@@ -7,7 +7,7 @@
     <h1 class="display-4 font-bold text-center fw-bold">Request Evaluation</h1>
 </div>
 
-  <form action="/create_evaluation/" method="POST">
+  <form action="/create_evaluation/" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-floating">
     <textarea class="form-control" name="comment" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
