--- a/templates/verify.html
+++ b/templates/verify.html
@@ -1,14 +1,16 @@
 {% extends 'base.html'%}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block content%}
 <div class="row">
-    <div class="col-4">
+
+  <div class="col-4">
         <form action="" method="post" autocomplete="off">
             {% csrf_token %}
-            {{form|crispy}}
+            {{form}}
             <button type="submit" class="btn btn-primary">Verify</button>
         </form>
-    </div>
+    </div> 
 </div>
 {% endblock content%}
