--- a/templates/verify.html
+++ b/templates/verify.html
@@ -6,6 +6,9 @@
 <div class="row">
 
   <div class="col-4">
+    {% if errMsg %}
+        <p style="color:red;">{{errMsg}}<p>
+    {% endif %}
         <form action="" method="post" autocomplete="off">
             {% csrf_token %}
             {{form}}
