some few bug fixes

--- a/templates/evaluation/evaluation_listing.html
+++ b/templates/evaluation/evaluation_listing.html
@@ -19,8 +19,8 @@
         {% for listing in listings %}
         <tr>
           <td>{{listing.id}}</td>
-          <td><img src="https://www.shareicon.net/data/512x512/2015/09/18/103160_man_512x512.png" 
-            alt="Image 1" class="img-fluid " style="width:50px; border-radius:25px" ></td>
+          <td><img src="../media/run_escape.png"
+            alt="user image" class="img-fluid " style="width:50px; border-radius:25px"></td>
           <td>{{listing.comment}}</td>
           <td>{{listing.contact_method}}</td>
         </tr>
